# telegram-bot-group

./: .gitignore  Dockerfile  config.json  docker-compose.yml  get_team_ids.py  main.py  pyproject.toml  requirements.txt  scratch.py  ss.py
.github/workflows/: deploy.yml
bot/: base_commands.py  config.py  db_utils.py  football_updates.py  handlers.py  messages.py  utils.py  zaruba_commands.py
bot/commands/: base.py  football.py  zaruba.py
bot/db/: repositories.py
bot/scheduling/: scheduler.py  seasonal.py
bot/services/: football.py  scraper.py
data/: team_ids.json
src/bot/: __init__.py  app.py  cli.py
src/bot/core/: __init__.py  config.py  constants.py  exceptions.py
src/bot/handlers/: __init__.py  base.py  football.py  zaruba.py
src/bot/i18n/: __init__.py  messages.py
src/bot/jobs/: __init__.py  football.py  holiday.py  scraper.py  seasonal.py  zaruba_cleanup.py
src/bot/models/: __init__.py  aura.py  match.py  subscriber.py  user.py  zaruba.py
src/bot/repositories/: __init__.py  aura.py  base.py  botinok.py  session.py  subscriber.py  user_identity.py  zaruba.py
src/bot/services/: __init__.py  football.py  holiday.py  notification.py  scraper.py  zaruba.py
tests/: conftest.py  test_base_commands.py  test_bot.py  test_db_utils.py  test_football_updates.py  test_handlers.py  test_holiday_updates.py  test_zaruba_commands.py
tests/unit/test_handlers/: test_base.py  test_zaruba.py
tests/unit/test_jobs/: test_zaruba_cleanup.py
tests/unit/test_repositories/: test_aura.py  test_subscriber.py  test_zaruba.py
(+1 files in other folders)
